Security and resource fixes